<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Contact Information</string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>

    <!-- contact strings -->
    <string name="save_btn_txt">Save Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="edit_btn_txt">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="addFragment_title">Add Contact</string>
    <string name="editFragment_title">Edit Contact</string>
    <string name="addNewContact">Add New Contact</string>


    <!-- redundant strings -->
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="currency_symbol">$</string>
    <string name="channel_name">MyChannel</string>
    <string name="channel_description">MyChannelDescription</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birthday_yyyy_mm_dd">Birthday(格式YYYY.MM.DD)</string>
    <string name="pick_image">Pick Image</string>
    <string name="imageuri">ImageUri</string>
    <string name="photo">Photo</string>
    <string name="chinese_name">Chinese Name</string>
    <string name="english_name">English Name</string>
    <string name="favorite">Favorite</string>
    <string name="birthday">Birthday</string>

</resources>